--- a/.eslintignore
+++ b/.eslintignore
@@ -1,6 +1,3 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# compiled output
 /dist
 /tmp
 /out-tsc
@@ -44,3 +41,6 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+/src/environments/
+/src/test.ts
+/src/app/app.component.spec.ts
