--- a/angular.json
+++ b/angular.json
@@ -118,8 +118,9 @@
       }
     }
   },
-  "defaultProject": "spreadsheet-js",
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
