--- a/.eslintignore
+++ b/.eslintignore
@@ -1,46 +1,11 @@
-/dist
-/tmp
-/out-tsc
-# Only exists if Bazel was run
-/bazel-out
+.idea
+*.iml
+yarn.lock
+.yarn
+.yarnrc.yml
+package.json
+dist
 
-# dependencies
-/node_modules
-
-# profiling files
-chrome-profiler-events*.json
-
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
-# misc
-/.angular/cache
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
-npm-debug.log
-yarn-error.log
-testem.log
-/typings
-
-# System Files
-.DS_Store
-Thumbs.db
-/src/environments/
-/src/test.ts
-/src/app/app.component.spec.ts
+.git
+node_modules
+.eslintrc.js
